Fixed some css. Added a scroll to create deck, so that the flashcards dont overflow the modal. users can now scroll through a list of flashcards to add to deck

--- a/flashcards/frontend/src/globalPageModule.css
+++ b/flashcards/frontend/src/globalPageModule.css
@@ -23,7 +23,7 @@
 }
 
 .global-page-flash-icon {
-  color: rgb(3, 252, 211);
+  color: rgb(12,102,228);
   margin-right: 10px;
   width: 40px !important;
   height: 40px !important;
